--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"body-parser": "^1.15.2",
-		"chai": "^4.2.0",
+		"body-parser": "^1.20.4",
+		"chai": "^4.5.0",
 		"chai-http": "^5.1.2",
 		"cors": "^2.8.5",
-		"dotenv": "^8.2.0",
-		"express": "^4.14.0",
-		"helmet": "^3.1.0",
-		"mocha": "^11.7.5"
+		"dotenv": "^8.6.0",
+		"express": "^4.22.1",
+		"helmet": "^3.23.3",
+		"mocha": "^11.7.5",
+		"mongoose": "^9.0.1",
+		"node": "^24.12.0"
 	},
 	"repository": {
 		"type": "git",
