--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "boilerplate-project-messageboard",
+	"name": "boilerplate-project-messagebaord",
 	"version": "0.0.1",
 	"description": "InfoSec project for freeCodeCamp",
 	"main": "server.js",
@@ -7,16 +7,15 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"body-parser": "^1.20.4",
-		"chai": "^4.5.0",
-		"chai-http": "^5.1.2",
-		"cors": "^2.8.5",
-		"dotenv": "^8.6.0",
-		"express": "^4.22.1",
-		"helmet": "^3.23.3",
-		"mocha": "^11.7.5",
-		"mongoose": "^9.0.1",
-		"node": "^24.12.0"
+		"body-parser": "^1.15.2",
+		"chai": "^4.2.0",
+		"chai-http": "^4.1.0",
+		"cors": "^2.8.1",
+		"dotenv": "^8.2.0",
+		"express": "^4.14.0",
+		"helmet": "^3.1.0",
+		"mocha": "^3.2.0",
+		"mongoose": "^5.11.15"
 	},
 	"repository": {
 		"type": "git",
